# hwinfo

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  _hwinfo
src/: CMakeLists.txt  aggregator.h  algo.h  args.h  battery.h  capatibility.h  complete.h  component.h  component_array.h  config.h  device_class.h  device_method.h  device_node.h  log.h  main.cpp  nodes.h  string_util.h  time.h  util.h
